# cg

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: entrypoints.py  exceptions.py  main.py  models.py  pydantic_formats.py  scheduler.py  utils.py
src/cpp/: __init__.py  cpp_create_nodes.py  cpp_query_parser.py  cpp_regex_patterns.py
src/dashboard/: __init__.py  bug_frequency_analyzer.py  criticality_scorer.py  metrics_aggregator.py  safety_classifier.py
src/dashboard/templates/: dashboard.html
src/git_integration/: __init__.py  git_client.py  inventory_builder.py  inventory_store.py  repo_scanner.py
src/github/: __init__.py  git_pr_fetcher.py  github_helpers.py  pr_change_analyzer.py  pull_repos.py
src/graph/: __init__.py  graph_base_class.py  graph_insights.py  graph_uploader.py  gremlin_queries.py
src/jira/: __init__.py  client.py  extractor.py
src/parsers/: __init__.py  git_repo_parser.py  parser_base_classes.py
src/prompts/: __init__.py  change_analysis.py
tests/: __init__.py
tests/api/: test_endpoints.py
tests/dashboard/: test_dashboard_metrics.py
tests/git/: __init__.py  test_git_integration.py
